Bug 152435 - EMFIO: Text is not displayed
Summary: EMFIO: Text is not displayed
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.0.0.beta2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: EMF-WMF
  Show dependency treegraph
 
Reported: 2022-12-09 12:39 UTC by Xisco Faulí
Modified: 2023-01-03 09:13 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
sample file (105.50 KB, application/vnd.ms-powerpoint)
2022-12-09 12:39 UTC, Xisco Faulí
Details
Comparsion MSO vs LibreOffice 7.5 (300.17 KB, image/png)
2022-12-09 12:40 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2022-12-09 12:39:27 UTC
Created attachment 184065 [details]
sample file

Steps to reproduce:
1. Open attached document

-> Drop caps not displayed. see Comparison file

Reproduced in

Version: 7.5.0.0.beta1+ (X86_64) / LibreOffice Community
Build ID: f561cf425cda33fa1c688dac14be052e116ce0f6
CPU threads: 8; OS: Linux 5.10; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2022-12-09 12:40:18 UTC
Created attachment 184066 [details]
Comparsion MSO vs LibreOffice 7.5
Comment 2 Xisco Faulí 2022-12-09 12:41:11 UTC
Regression introduced by:

author	Paris Oplopoios <paris.oplopoios@collabora.com>	2022-11-04 12:52:27 +0200
committer	Miklos Vajna <vmiklos@collabora.com>	2022-11-08 15:48:53 +0100
commit 1230b88055c7389d2c376c316f91549e4aaef8aa (patch)
tree aad2c21c7adb6abfb01672279792f4ffff744422
parent 363d45244b2ba3f666e50255f77900d3849e51d2 (diff)
Make EMR_SAVEDC not UpdateClipRegion

Bisected with: bibisect-linux64-7.5

Adding Cc: to Paris Oplopoios
Comment 3 Xisco Faulí 2022-12-09 12:51:20 UTC
attachment 159439 [details] from bug 159439 is also affected
Comment 4 Xisco Faulí 2022-12-09 12:52:03 UTC
(In reply to Xisco Faulí from comment #3)
> attachment 159439 [details] from bug 159439 is also affected

from bug 151678
Comment 5 Paris Oplopoios 2022-12-09 12:58:27 UTC
I was thinking that patch would eventually backfire. At least now I have EMF files that need that line so I can debug it more. Because that line was messing up an EMF file, but removing it now messes up your EMF files. I'll look into this in the next few days to try to have both mine and your EMF display correctly.
Comment 6 Commit Notification 2022-12-13 06:59:46 UTC
Paris Oplopoios committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/75093a9f7fbde760a3034f41694739c7454cb7eb

tdf#152435 Revert "Make EMR_SAVEDC not UpdateClipRegion"

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2022-12-13 15:41:19 UTC
Paris Oplopoios committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/ed9276531613731f81d05854054b8aae1e1df61a

tdf#152435 Revert "Make EMR_SAVEDC not UpdateClipRegion"

It will be available in 7.5.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.