tdf#152435 Revert "Make EMR_SAVEDC not UpdateClipRegion"

This reverts commit 1230b88055c7389d2c376c316f91549e4aaef8aa.

Reason for revert:
The reverted commit breaks the files documented in tdf#152435 (some
text is not shown in those .EMF files). The reverted commit would solve
an issue where some text was not clipped correctly, albeit in a naive
way. As it is more important that text is shown rather than some text
having correct clipping, that patch is reverted and I will look for one
that fixes both cases.

Change-Id: I42e85b802b8bf1e77e96f0016cd1d83201047032
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/143970
Tested-by: Jenkins
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
(cherry picked from commit 75093a9f7fbde760a3034f41694739c7454cb7eb)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/144029
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>